--- a/style/about.css
+++ b/style/about.css
@@ -109,12 +109,29 @@ body {
     transform: translateY(-50%);
 }
 /*===========================team ==========================================================*/
+.team-member {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; /* Ensure same height for all cards */
+}
+
 .team-member-image {  
-  width: 150px; /* Set a consistent width */  
-  height: 150px; /* Set a consistent height */  
-  object-fit: cover; /* Ensures the image covers the area without distortion */  
-  border-radius: 50%; /* Ensures images are rounded */  
-}  
+  width: 150px;  
+  height: 150px;  
+  object-fit: cover;  
+  border-radius: 50%;  
+}
+
+.bg-white {
+  background-color: #fff;
+}
+.shadow {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 /*===============================================================================*/
 
 /*=====footer==================================================*/
